# filteringpipeline

./: .gitignore  LICENCE  README.md  pyproject.toml  setup.cfg
.github/workflows/: pullrequestcheck.yml  python-publish.yml  release.yml
docs/: filters.md  pipeline.md  source.md
docs/filters/: subpipeline_filter.md
