[metadata]
name = filtering-pipeline
description = This package implements the design pattern tube and filters for making AI pipeline pre- and post-processing
long_description_content_type = text/markdown
url = https://github.com/CleanAICoding/filteringpipeline
project_urls =
    Bug Tracker = https://github.com/CleanAICoding/filteringpipeline/issues
    Changelog = https://github.com/CleanAICoding/filteringpipeline/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = filtering_pipeline
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gha_python_packaging_demo = filtering-pipeline.app:entry_point